[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "huskium"
dynamic = ["version"]
description = "UI Automation Page Objects design pattern."
authors = [
    {name = "Johnny", email = "johnny071531@gmail.com"}
]
dependencies = [
    "Appium-Python-Client >=5.0.0"
]
requires-python = ">= 3.12"
readme = "README.md"
license = {text = "MIT"}
keywords = ["huskium", "huskypo", "selenium", "appium", "page object", "automation"]

[project.urls]
Homepage = "https://github.com/uujohnnyuu/huskium"

[tool.setuptools]
packages = ["huskium", "huskium.selenium", "huskium.appium"]

[tool.setuptools.dynamic]
version = {attr = "huskium.__version__"}

[tool.setuptools.package-data]
huskium = ["*.py"]
